--- a/src/components/explain/exchangeRecord/index.css
+++ b/src/components/explain/exchangeRecord/index.css
@@ -125,11 +125,13 @@
     font-size: 0.3rem;
     font-weight: bold;
     color: #2b2b2b;
+    line-height: 0.25rem;
 }
 .good_intr{
     font-size: 0.2rem;
     color: #8e8e8e;
     margin-top: 0.1rem;
+    line-height: 0.25rem;
 }
 .good_price{
     font-size: 0.28rem;
@@ -137,7 +139,7 @@
     margin-top: 0.3rem;
     position: absolute;
     left: 1.8rem;
-    bottom: 0.2rem;
+    bottom: 0.16rem;
 }
 .good_nums{
     font-size: 0.24rem;
